--- a/src/themes/green-icon/css/style.css
+++ b/src/themes/green-icon/css/style.css
@@ -117,7 +117,7 @@ color:#fff !important;
 
 .container-fluid .calender  tbody td.active {
 color:#fff;
-background: #529214 !important;
+background: #529214;
 padding: 2px 2px 0px 2px;
 }
 
@@ -356,15 +356,15 @@ margin-top:120px;
 	overflow: visible;
 	margin-left: 0px !important;
 	padding-bottom: 10px !important;
-	padding-top: 10px !important;
+	padding-top: 10px;
 }
 
 .menu-a
 {
-	font-size: 14px !important;
+	font-size: 14px;
 	font-family: 'Raleway' !important;
   color: #2C99CD !important;
-  padding-left: 10px !important;
+  padding-left: 10px;
   padding-bottom: 5px !important;
   padding-top: 5px !important;
   padding-right: 10px !important;
@@ -373,7 +373,7 @@ margin-top:120px;
 
 .menu-a-active
 {
-	color: white !important;
+	color: white;
 }
 
 .menu-li
@@ -441,7 +441,7 @@ margin-top:120px;
 	.custom-toggle
 	{
 		margin-bottom: 0px !important;
-		margin-top: 12% !important;
+		margin-top: 12%;
 	}
 
 
@@ -498,12 +498,12 @@ margin-top:120px;
 
 	.menu-li-active
 	{
-		  background-color: white !important;
+		  background-color: white;
 	}
 
 	.menu-a-active
 	{
-		color: #2C99CE !important;
+		color: #2C99CE;
 	}
 
 	.search-ul
@@ -566,7 +566,7 @@ margin-top:120px;
 	}
 	.footer-div
 	{
-	background-size: cover !important;
+	background-size: cover;
 	 }
 
 	 .lab-list-col-10
@@ -996,7 +996,7 @@ font-size: 30px;
 
 	.banner-text-small
 	 {
-		font-size: 0.8em !important;
+		font-size: 0.8em;
   	 }
 
 	.banner-text-medium
@@ -1245,7 +1245,7 @@ font-size: 30px;
 
 	.banner-text-big
 	{
-		font-size: 2.0em !important;
+		font-size: 2.0em;
 	}
 
 	.banner-text
