4- Update style1.css

--- a/src/themes/green-icon/css/style1.css
+++ b/src/themes/green-icon/css/style1.css
@@ -734,12 +734,12 @@ a:focus
 
 .banner-caption-text
 {
-<<<<<<< HEAD
+
 	font-size: 2.0em;	
 	text-align: left;
-=======
+
 	font-size: 1.2em;	
->>>>>>> f3b4f22ca1ec6639cf95185650d5427a8bca30ee
+        f3b4f22ca1ec6639cf95185650d5427a8bca30ee
 	line-height: normal;
 	color: black;
 	
